Added another gtag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   gtag('config', 'UA-120365138-1');
 </script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-691JKXC7DX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-691JKXC7DX');
+</script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Karam El-loh - Aspiring Full Stack Developer</title>
